kubernetes/logging/opensearch-istio-vs.template.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: opensearch
spec:
  gateways:
    - internal
  hosts:
    - ${OPENSEARCH_HOSTNAME}
  http:
    - route:
        - destination:
            host: opensearch-dashboards
            port:
              number: 5601
      headers:
        request:
          set:
            x-forwarded-proto: https
